added transition periods to dynamics plots

--- a/ariane/quant_dynamics.ipynb
+++ b/ariane/quant_dynamics.ipynb
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
     "ax[3,1].set_yticklabels([])\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.savefig('/data1/bbeutel/LO_user/ariane/figures/winter_dynamics.pdf')"
+    "plt.savefig('/data1/bbeutel/LO_user/ariane/figures/total_dynamics.pdf')"
    ]
   },
   {
