organised data into csv files for analysis

--- a/trace_metals/transport.ipynb
+++ b/trace_metals/transport.ipynb
@@ -9,11 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -25,50 +24,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>dates</th>\n",
+       "      <th>south</th>\n",
+       "      <th>north</th>\n",
+       "      <th>loop</th>\n",
+       "      <th>offshore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>31523.150134</td>\n",
+       "      <td>446173.178852</td>\n",
+       "      <td>1.564897e+06</td>\n",
+       "      <td>134578.264178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-01-02</td>\n",
+       "      <td>30711.416257</td>\n",
+       "      <td>496092.148095</td>\n",
+       "      <td>1.342925e+06</td>\n",
+       "      <td>119652.985191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>28947.529846</td>\n",
+       "      <td>657004.390949</td>\n",
+       "      <td>1.105739e+06</td>\n",
+       "      <td>141002.901359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>28814.534290</td>\n",
+       "      <td>798356.947900</td>\n",
+       "      <td>1.074042e+06</td>\n",
+       "      <td>130871.950872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>41037.808316</td>\n",
+       "      <td>754971.199198</td>\n",
+       "      <td>1.020577e+06</td>\n",
+       "      <td>144477.688500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       dates         south          north          loop  \\\n",
+       "0           0  2017-01-01  31523.150134  446173.178852  1.564897e+06   \n",
+       "1           1  2017-01-02  30711.416257  496092.148095  1.342925e+06   \n",
+       "2           2  2017-01-03  28947.529846  657004.390949  1.105739e+06   \n",
+       "3           3  2017-01-04  28814.534290  798356.947900  1.074042e+06   \n",
+       "4           4  2017-01-05  41037.808316  754971.199198  1.020577e+06   \n",
+       "\n",
+       "        offshore  \n",
+       "0  134578.264178  \n",
+       "1  119652.985191  \n",
+       "2  141002.901359  \n",
+       "3  130871.950872  \n",
+       "4  144477.688500  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def wm_day_divide(mydata):\n",
-    "    length =int(np.max(mydata.init_t)/24)\n",
-    "\n",
-    "    bdy_loo = 0\n",
-    "    bdy_sou = 4\n",
-    "    bdy_off = 2\n",
-    "    bdy_nor = 3\n",
-    "\n",
-    "    south = [np.sum(mydata.final_transp[(mydata.final_section==bdy_sou) & (mydata.init_t >= 1+(i*24)) & (mydata.init_t <= 1+(i*24)+23)]).values/24 for i in range(length)]\n",
-    "    north = [np.sum(mydata.final_transp[(mydata.final_section==bdy_nor) & (mydata.init_t >= 1+(i*24)) & (mydata.init_t <= 1+(i*24)+23)]).values/24 for i in range(length)]\n",
-    "    off = [np.sum(mydata.final_transp[(mydata.final_section==bdy_off) & (mydata.init_t >= 1+(i*24)) & (mydata.init_t <= 1+(i*24)+23)]).values/24 for i in range(length)]\n",
-    "    loop = [np.sum(mydata.final_transp[(mydata.final_section==bdy_loo) & (abs(mydata.init_t-mydata.final_t) > 24) & (mydata.init_t >= 1+(i*24)) & (mydata.init_t <= 1+(i*24)+23)]).values/24 for i in range(length)]\n",
-    " \n",
-    "    return south, north, off, loop"
+    "df = pd.read_csv(\"/data1/bbeutel/LO_user/trace_metals/daily_transport.csv\")\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = xr.open_dataset(\"/data1/bbeutel/LO_user/ariane/metals/20170101/ariane_positions_quantitative.nc\")\n",
-    "south, north, off, loop = wm_day_divide(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "startday = dt.datetime(2017, 1, 1)\n",
-    "length =int((np.max(df.init_t))/24)\n",
-    "dates = [startday+dt.timedelta(days=i) for i in range(length)] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,31 +151,54 @@
    "source": [
     "fig, ax = plt.subplots(4,1,figsize=[7,9])\n",
     "\n",
-    "ax[0].plot(dates,loop,c='tab:blue')\n",
-    "ax[0].axhline(np.mean(loop),c='k',ls='dashed',alpha=0.5)\n",
+    "ax[0].plot(df.dates,df.loop,c='tab:blue')\n",
+    "ax[0].axhline(np.mean(df.loop),c='k',ls='dashed',alpha=0.5)\n",
     "ax[0].set_title('Loop',c='tab:blue')\n",
     "\n",
-    "ax[1].plot(dates,north,c='tab:orange')\n",
-    "ax[1].axhline(np.mean(north),c='k',ls='dashed',alpha=0.5)\n",
+    "ax[1].plot(df.dates,df.north,c='tab:orange')\n",
+    "ax[1].axhline(np.mean(df.north),c='k',ls='dashed',alpha=0.5)\n",
     "ax[1].set_title('North',c='tab:orange')\n",
     "\n",
-    "ax[2].plot(dates,off,c='tab:green')\n",
-    "ax[2].axhline(np.mean(off),c='k',ls='dashed',alpha=0.5)\n",
+    "ax[2].plot(df.dates,df.offshore,c='tab:green')\n",
+    "ax[2].axhline(np.mean(df.offshore),c='k',ls='dashed',alpha=0.5)\n",
     "ax[2].set_title('Offshore',c='tab:green')\n",
     "\n",
-    "ax[3].plot(dates,south,c='tab:red')\n",
-    "ax[3].axhline(np.mean(south),c='k',ls='dashed',alpha=0.5)\n",
+    "ax[3].plot(df.dates,df.south,c='tab:red')\n",
+    "ax[3].axhline(np.mean(df.south),c='k',ls='dashed',alpha=0.5)\n",
     "ax[3].set_title('South',c='tab:red')\n",
     "\n",
     "\n",
     "for axs in ax:\n",
     "    axs.set_ylim([0,2000000])\n",
-    "    axs.set_xticks([dates[0],dates[89],dates[180],dates[272],dates[364]])\n",
+    "    axs.set_xticks([df.dates[0],df.dates[89],df.dates[180],df.dates[272],df.dates[364]])\n",
     "    axs.set_xticklabels([])\n",
     "    axs.set_ylabel('Transport ($m^3 s^{-1}$)')\n",
-    "ax[3].set_xticklabels([str(dates[0])[:10],str(dates[89])[:10],str(dates[180])[:10],str(dates[272])[:10],str(dates[364])[:10]])\n",
+    "ax[3].set_xticklabels([str(df.dates[0])[:10],str(df.dates[89])[:10],str(df.dates[180])[:10],str(df.dates[272])[:10],str(df.dates[364])[:10]])\n",
     "\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "south mean = 136.832 mSv\n",
+      "north mean = 512.387 mSv\n",
+      "offshore mean = 196.606 mSv\n",
+      "loop mean = 1200.087 mSv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"south mean = {np.round(np.mean(df.south),0)/1000} mSv\")\n",
+    "print(f\"north mean = {np.round(np.mean(df.north),0)/1000} mSv\")\n",
+    "print(f\"offshore mean = {np.round(np.mean(df.offshore),0)/1000} mSv\")\n",
+    "print(f\"loop mean = {np.round(np.mean(df.loop),0)/1000} mSv\")"
    ]
   },
   {
